WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117274
Crash if an IPC connection is invalidated before it's completely set up
https://bugs.webkit.org/show_bug.cgi?id=117274
Summary
Crash if an IPC connection is invalidated before it's completely set up
Anders Carlsson
Reported
2013-06-05 13:28:07 PDT
Crash if an IPC connection is invalidated before it's completely set up
Attachments
Patch
(4.00 KB, patch)
2013-06-05 15:33 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(4.36 KB, patch)
2013-06-05 15:40 PDT
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-06-05 15:33:47 PDT
Created
attachment 203889
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-05 15:35:50 PDT
Attachment 203889
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/Platform/CoreIPC/mac/ConnectionMac.cpp']" exit_code: 1 Source/WebKit2/Platform/CoreIPC/mac/ConnectionMac.cpp:160: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2013-06-05 15:40:07 PDT
Created
attachment 203891
[details]
Patch
WebKit Commit Bot
Comment 4
2013-06-05 15:42:05 PDT
Attachment 203891
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/Platform/CoreIPC/mac/ConnectionMac.cpp']" exit_code: 1 Source/WebKit2/Platform/CoreIPC/mac/ConnectionMac.cpp:164: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 5
2013-06-05 15:43:58 PDT
Comment on
attachment 203891
[details]
Patch Quite clever. r=me
Anders Carlsson
Comment 6
2013-06-05 15:54:29 PDT
Committed
r151246
: <
http://trac.webkit.org/changeset/151246
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug